# secondary-analysis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pullapprove.yml  .travis.yml  Dockerfile  README.md  dev-requirements.txt  security.txt
certs/: get_certs.sh
configs/: lira-config.json.ctmpl
dashboards/: create-metrics.py  metrics_template.json  readme.md  requirements.txt
deploy/: deploy.sh
deploy/job-manager/: README.md  capabilities_config.json  capabilities_config_caas.json  deploy.sh  environment.template.ts.ctmpl  gunicorn_args.txt  job-manager-deployment.yaml.ctmpl  nginx.conf.ctmpl
monitor/: check_workflows.py  check_workflows.sh  parse_quotas.py
operations/: abort_workflows.py  start_greenbox.sh  stop_greenbox.sh
operations/big_red_button/: abort_workflows.py
operations/dashboard/: create-metrics.py  readme.md  requirements.txt
operations/data_cleanup/: 2019_10_28_erase_spatio_temporal_kidney.sh  requirements.txt  scavenger.py
test/: await_workflow_completion.py  configtemplate.json  create_lira_config.py  current_deployed_version.py  get_latest_release.py  integration_test.sh  render-ctmpls.sh  run_int_test_from_lira_pr.sh  run_int_test_from_pipeline_tools_pr.sh  run_int_test_from_pr.sh  run_int_test_from_skylab_pr.sh  run_int_test_locally.sh  send_notification.py  ss2_notification_dev.json
tests/meteoroid/: README.md  pyproject.toml
tests/meteoroid/manifests/: integration_test.json
tests/meteoroid/src/meteoroid/exceptions/: __init__.py
tests/meteoroid/src/meteoroid/utilities/: docker.py  log.py  vault.py
(+81 files in other folders)
